--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-        <!-- <link rel="stylesheet" href="../static/img/fav/fav.png" type="image/png"> -->
+        <link rel="stylesheet" href="../static/img/fav/fav.png" type="image/png">
         <link rel="icon" href="{{ url_for('static', filename='/img/fav/fav.png') }}" type="image/png">
-        <!-- <link rel="stylesheet" href="../static/css/index.css"> -->
+        <link rel="stylesheet" href="../static/css/index.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='/css/index.css') }}" >
         <title>swizzle</title>
     </head>
@@ -35,9 +35,9 @@
                 </li>
                 <li>
                     <div class="text">
-                        <p>
+                        <p><nobr>
                             "swizzle" is a tool for musicians providing<br><b>AI generated music notation of songs</b>.
-                        </p>
+                        </nobr></p>
                         <p>
                             You can find the code on our <a href="https://www.github.com/swizzle-app/swizzle" target="_blank">Github</a>
                         </p>
@@ -149,7 +149,7 @@
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <!-- <script src="../static/src/main.js"></script> -->
+    <script src="../static/src/main.js"></script>
     <script src="{{ url_for('static', filename='/src/main.js') }}"></script>
     <script type="text/javascript">
         $(document).ready(function() {
