--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-        <link rel="stylesheet" href="../static/img/fav/fav.png" type="image/png">
+        <!-- <link rel="stylesheet" href="../static/img/fav/fav.png" type="image/png"> -->
         <link rel="icon" href="{{ url_for('static', filename='/img/fav/fav.png') }}" type="image/png">
-        <link rel="stylesheet" href="../static/css/index.css">
+        <!-- <link rel="stylesheet" href="../static/css/index.css"> -->
         <link rel="stylesheet" href="{{ url_for('static', filename='/css/index.css') }}" >
         <title>swizzle</title>
     </head>
@@ -47,7 +47,7 @@
         </div>
         <div class="col a-center" id="content">
             <div class="logo">
-                <?xml version="1.0" encoding="utf-8"?>
+                
                 <svg class="svgLogo" version="1.1" id="svgLogo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 1920 500" style="enable-background:new 0 0 1920 500;" xml:space="preserve">
                     <style type="text/css">
@@ -149,7 +149,7 @@
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="../static/src/main.js"></script>
+    <!-- <script src="../static/src/main.js"></script> -->
     <script src="{{ url_for('static', filename='/src/main.js') }}"></script>
     <script type="text/javascript">
         $(document).ready(function() {
